--- a/training-app/index.html
+++ b/training-app/index.html
@@ -28,7 +28,7 @@
           <label class="form-check-label" for="svm">SVM</label>
         </div>
       </div>
-      <label for="select-vars">Select vars: </label>
+      <label for="select-vars">Select predictors: </label>
       <div class="form-group" id="select-vars">
 
       </div>
