--- a/training-app/index.html
+++ b/training-app/index.html
@@ -11,10 +11,14 @@
 
 <div class="container">
   <h2>Training app</h2>
-  <form>
+  <form id="training-form">
     <div class="form-group">
       <label for="csv-file">CSV data file: </label>
       <input type="file" class="form-control-file" id="csv-file">
+
+    </div>
+    <div class="form-group">
+      <button class="btn btn-outline-info" id="open-chart">Open chart</button>
     </div>
     <div id="content" hidden>
       <label for="div-model">Model: </label>
@@ -43,7 +47,7 @@
       </div>
 
       <div class="form-group">
-        <input type="submit" class="btn btn-outline-primary" value="Submit">
+        <input type="submit" class="btn btn-lg btn-success" value="Submit">
       </div>
     </div>
 
