--- a/training-app/chart.html
+++ b/training-app/chart.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-  <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-  <title>View chart</title>
-</head>
-<body>
-
-<script src="js/chart-manager.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self'"
+    />
+    <meta
+      http-equiv="X-Content-Security-Policy"
+      content="default-src 'self'; script-src 'self'"
+    />
+    <title>View chart</title>
+  </head>
+  <body>
+    <canvas id="myChart" width="200" height="100"></canvas>
+    <script src="js/chart-manager.js"></script>
+  </body>
 </html>
