improvement: modifica var names

--- a/training-app/index.html
+++ b/training-app/index.html
@@ -21,6 +21,11 @@
       <button class="btn btn-outline-info" id="open-chart">Open chart</button>
     </div>
     <div id="content" hidden>
+      <div class="form-group">
+        <input type="checkbox" class="form-check-inline" id="have-pred"/>
+        <label for="have-pred">I want modify a predictor</label>
+        <input type="file" class="form-control-file" id="pred-file" hidden>
+      </div>
       <label for="div-model">Model: </label>
       <div class="form-group" id="div-model">
         <div class="form-check form-check-inline">
