feat: aggiungi  modifica

--- a/training-app/index.html
+++ b/training-app/index.html
@@ -23,7 +23,7 @@
     <div id="content" hidden>
       <div class="form-group">
         <input type="checkbox" class="form-check-inline" id="have-pred"/>
-        <label for="have-pred">I want modify a predictor</label>
+        <label for="have-pred" class="form-check-inline">I want modify a predictor</label>
         <input type="file" class="form-control-file" id="pred-file" hidden>
       </div>
       <label for="div-model">Model: </label>
