--- a/training-app/index.html
+++ b/training-app/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-  <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-  <title>Main</title>
+  <title>Training app</title>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
 
-<div class="container">
+<div class="container" id="app">
   <h2>Training app</h2>
   <form id="training-form">
     <div class="form-group">
@@ -17,13 +15,10 @@
       <input type="file" class="form-control-file" id="csv-file">
 
     </div>
-    <div class="form-group">
-      <button class="btn btn-outline-info" id="open-chart">Open chart</button>
-    </div>
     <div id="content" hidden>
       <div class="form-group">
         <input type="checkbox" class="form-check-inline" id="have-pred"/>
-        <label for="have-pred" class="form-check-inline">Modify a predictor</label>
+        <label for="have-pred" class="form-check-inline" for="have-pred">Modify a predictor</label>
         <input type="file" class="form-control-file" id="pred-file" hidden>
       </div>
       <label for="div-model">Model: </label>
