--- a/training-app/index.html
+++ b/training-app/index.html
@@ -7,51 +7,82 @@
 </head>
 <body>
 
-<div class="container" id="app">
-  <h2>Training app</h2>
-  <form id="training-form">
-    <div class="form-group">
-      <label for="csv-file">CSV data file: </label>
-      <input type="file" class="form-control-file" id="csv-file">
-
-    </div>
-    <div id="content" hidden>
+<div class="container row" id="app">
+  <div class="col-md-4">
+    <h2>Training app</h2>
+    <form id="training-form">
       <div class="form-group">
-        <input type="checkbox" class="form-check-inline" id="have-pred"/>
-        <label for="have-pred" class="form-check-inline" for="have-pred">Modify a predictor</label>
-        <input type="file" class="form-control-file" id="pred-file" hidden>
+        <label for="csv-file">CSV data file: </label>
+        <input type="file" class="form-control-file" id="csv-file">
+
       </div>
-      <label for="div-model">Model: </label>
-      <div class="form-group" id="div-model">
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" name="model" type="radio" id="rl" value="rl" checked>
-          <label class="form-check-label" for="rl">RL</label>
+      <div id="content" hidden>
+        <div class="form-group">
+          <input type="checkbox" class="form-check-inline" id="have-pred"/>
+          <label for="have-pred" class="form-check-inline" for="have-pred">Modify a predictor</label>
+          <input type="file" class="form-control-file" id="pred-file" hidden>
         </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input" name="model" type="radio" id="svm" value="svm">
-          <label class="form-check-label" for="svm">SVM</label>
+        <label for="div-model">Model: </label>
+        <div class="form-group" id="div-model">
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" name="model" type="radio" id="rl" value="rl" checked>
+            <label class="form-check-label" for="rl">RL</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" name="model" type="radio" id="svm" value="svm">
+            <label class="form-check-label" for="svm">SVM</label>
+          </div>
+        </div>
+        <label for="select-vars">Select variables: </label>
+        <div class="form-group" id="select-vars">
+
+        </div>
+        <div class="form-group">
+          <label for="select-target">Select target:</label>
+          <select class="custom-select" id="select-target">
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="notes">Notes: </label>
+          <textarea class="form-control" id="notes"></textarea>
+        </div>
+
+        <div class="form-group">
+          <input type="submit" class="btn btn-lg btn-success" value="Submit">
         </div>
       </div>
-      <label for="select-vars">Select predictors: </label>
-      <div class="form-group" id="select-vars">
 
-      </div>
-      <div class="form-group">
-        <label for="select-target">Select target:</label>
-        <select class="custom-select" id="select-target">
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="notes">Notes: </label>
-        <textarea class="form-control" id="notes"></textarea>
-      </div>
+    </form>
+  </div>
 
-      <div class="form-group">
-        <input type="submit" class="btn btn-lg btn-success" value="Submit">
+  <div class="col-md-8" id="div-chart" hidden>
+    <div>
+      <canvas id="data-chart" width="70vw" height="70vh"></canvas>
+
+      <div class="container">
+        <form class="form-inline">
+          <div class="form-row col-12">
+            <div class="form-group form-check-inline">
+              <label for="x-select">X: </label>
+              <select id="x-select" class="custom-select">
+              </select>
+            </div>
+            <div class="form-group form-check-inline">
+              <label for="y-select">Y: </label>
+              <select id="y-select" class="custom-select">
+              </select>
+            </div>
+
+            <div class="form-group form-check-inline">
+              <label for="t-select">Target: </label>
+              <select id="t-select" class="custom-select">
+              </select>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
-
-  </form>
+  </div>
 </div>
 
 <script src="js/index.js"></script>
