--- a/training-app/index.html
+++ b/training-app/index.html
@@ -74,8 +74,8 @@
             </div>
 
             <div class="form-group form-check-inline">
-              <label for="t-select">Target: </label>
-              <select id="t-select" class="custom-select">
+              <label for="t-select">SVM Target: </label>
+              <select id="t-select" class="custom-select" disabled>
               </select>
             </div>
           </div>
